# substitute_dict

./: LICENSE  Makefile  README.md  pyproject.toml  run_flake8.sh
substitute/: substitute.py
testdata/: input.json  output_success_ref.json
tests/: test_substitute.py
