[tool.poetry]
name = "superduperdb-testtask"
version = "0.1.0"
description = ""
authors = ["Hemant Ranvir <hemantranvir@gmail.com>"]
readme = "README.md"
packages = [{include = "substitute"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
